web-infras/parser/tests/fixtures/babel/core/opts/allowNewTargetOutsideFunction-false-2/output.txt
[SyntaxError]: `new.target` can only be used in functions or class properties. (1,17)
1|const y = () => new.target;
 |               ^
